# wuyun-liuqi-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  PRODUCT.md  README.md  README_AI.md  README_for_humans.md  RULES.md  SKILL.md  conformance.yaml  index.html  package-lock.json  package.json  pyproject.toml  routing.md  routing.yaml  server.js
.claude-plugin/: marketplace.json  plugin.json
advanced-alignment/: README.md  api_specs.json  constitution_alignment.md  weather_integration.md
agent-workflow/: react_workflow.md  self_evolve_hook.md  workflow_config.json
case-journal/: _index.md  _template.md  precedent-disclaimer.md
demo/: yunqi_ui_prototype.html
docs/: SAG_INTEGRATION_EVALUATION.md  WUYUN_LIUQI_CORE.md  architecture.md  function-coverage.md  optimization-sprint.md  optimization.md  roadmap.md  self_evolve_optimization.md  understanding_the_thought_optimization.md  ux_optimization.md
docs-generator/: SKILL.md
ganzhi-basics/: SKILL.md
prompts/: expression_style.md  onboarding_prompt.md  system_prompt.md
rag-knowledge-base/: LITERATURE_EXPANSION.md  README.md  _entry_template.json  asset1_suiyun.json  asset2_sitian_zaiquan.json  asset3_kezhujialin.json  asset4_formula.json  asset5_commentary.json  asset6_regional.json  asset7_constitution.json  index.json  terminology.json
references/: gotchas.md  module-index.md  script-index.md
rules/: agent-behavior.md  calculation.md  medical-safety.md  output.md
scripts/: _common.py  advanced_alignment.py  audit_orphans.py  check_conformance.py  (+40 more)
(+90 files in other folders)
